platform/gitops/components/storage/garage/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: garage
  labels:
    deploykube.gitops/public-gateway: allowed
    istio-injection: enabled
    app.kubernetes.io/name: garage
    app.kubernetes.io/component: object-storage
    observability.grafana.com/tenant: platform
