platform/gitops/components/storage/garage/base/peerauthentication.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: garage-mtls-permissive
  namespace: garage
spec:
  mtls:
    mode: PERMISSIVE
