platform/gitops/components/storage/garage/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: garage
  namespace: garage
  labels:
    app.kubernetes.io/name: garage
    app.kubernetes.io/component: object-storage
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: garage
    app.kubernetes.io/component: object-storage
  ports:
    - name: http-s3
      port: 3900
      targetPort: 3900
      protocol: TCP
    - name: rpc
      port: 3901
      targetPort: 3901
      protocol: TCP
    - name: admin
      port: 3903
      targetPort: 3903
      protocol: TCP
