platform/gitops/components/storage/garage/base/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: garage
  namespace: garage
  labels:
    app.kubernetes.io/name: garage
    app.kubernetes.io/component: object-storage
spec:
  hostnames:
    - garage.invalid
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: public-gateway
      namespace: istio-system
      sectionName: https-garage
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: garage
          port: 3900
          weight: 1
